welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
 def nbPas(Y: Int): Int = {
    return 7 - Y
  }
def move(nbPas: Int, versLAvant: Boolean): Double = {
  getY()
  if versLAvant == true
  avancenbPas()
  else 
  reculenbPas()
}